# Fedi3

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  ETHICS.md  FORK_POLICY.md  GOVERNANCE.md  LICENSE  NETWORK_INTEGRITY.MD  PROTOCOL_COMPATIBILITY.md  README.md  TRADEMARK_AND_NAME.md  _tmp_stats.sh  build_appimage.sh  docker-compose.yml
.github/workflows/: ci.yml  cpp-make.yml  flutter.yml  rust.yml
AppDir/: AppRun
app/: README.md  l10n.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist  Runner-Bridging-Header.h
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/: core_api.dart  fedi3_core.dart
app/lib/l10n/: app_en.arb  app_it.arb  l10n_ext.dart
app/lib/model/: chat_models.dart  core_config.dart  note_models.dart  relay_sync_models.dart  ui_prefs.dart
app/lib/services/: actor_repository.dart  backup_codec.dart  backup_crypto_service.dart  chat_encryption_service.dart  cloud_backup_service.dart  core_event_stream.dart  core_service_control.dart  encryption_manager.dart  gif_service.dart  link_preview_repository.dart  notification_archive_store.dart  notification_service.dart  notification_sound_service.dart  object_repository.dart  post_quantum_crypto.dart  relay_admin_api.dart  relay_sync_api.dart  relay_sync_stream_client.dart  relay_verify.dart  rss_feed_service.dart  rss_feed_store.dart  secret_store.dart  telemetry_service.dart  translation_service.dart  update_service.dart
app/lib/state/: app_state.dart  config_store.dart  direct_recipient_store.dart  draft_store.dart  emoji_palette_store.dart  emoji_recent_store.dart  emoji_store.dart  note_flags_store.dart  peer_presence_store.dart  prefs_store.dart  reaction_store.dart  relay_sync_store.dart
app/lib/ui/: app_root.dart  (+1 more)
app/linux/: CMakeLists.txt
app/test/: actor_repository_test.dart  chat_encryption_test.dart  encryption_manager_test.dart  post_quantum_crypto_test.dart  relay_sync_models_test.dart  secret_sanitization_test.dart  widget_test.dart
app/tool/: timeline_parse.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
crates/fedi3_core/: Cargo.toml
crates/fedi3_core/src/: ap.rs  chat.rs  crypto_envelope.rs  delivery.rs  delivery_queue.rs  device_sync.rs  ffi.rs  http_retry.rs  http_sig.rs  keys.rs  legacy_sync.rs  lib.rs  media_backend.rs  nat.rs  net_metrics.rs  object_fetch.rs  p2p.rs  p2p_sync.rs  relay_bridge.rs  relay_sync.rs  runtime.rs  social_db.rs  storage_gc.rs  tunnel.rs  ui_events.rs  webrtc_p2p.rs
crates/fedi3_p2p_infra/: Cargo.toml
crates/fedi3_p2p_infra/src/: mailbox.rs  main.rs
crates/fedi3_protocol/: Cargo.toml
crates/fedi3_relay/: Cargo.toml
crates/fedi3_relay/sql/: postgres_schema.sql
crates/fedi3_relay/src/: main.rs  media_store.rs  relay_mesh.rs  relay_notes.rs
deploy/appimage/: fedi3.desktop
deploy/p2p_infra/: Dockerfile  docker-compose.yml  entrypoint.sh
deploy/relay/: Caddyfile  Dockerfile  entrypoint.sh
deploy/turn/: docker-compose.yml
docs/: .linux error.kate-swp  activitypub_compat_report.md  activitypub_compatibility_matrix.md  app_guide.md  deploy_core.md  deploy_relay.md  faq.md  getting_started.md  linux error  ops_backup_restore.md  relay_sync_api.md  troubleshooting.md  updates.md
scripts/: ap_compat_matrix.py  backup_relay_media.sh  backup_relay_pg.sh  bootstrap.ps1  build_appimage.sh  build_core.ps1  build_core.sh  check_release_hardening.sh  check_webrtc.ps1  install_arch.sh  install_deb.sh  install_windows.ps1  relay_diagnose.sh  relay_smoke_test.sh  release_build_linux.sh  release_build_windows.ps1  release_full_linux.sh  release_full_windows.ps1  restore_relay_media.sh  restore_relay_pg.sh
(+91 files in other folders)
