[package]
name = "fedi3_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
bytes = "1"
directories = "5"
fedi3_protocol = { path = "../fedi3_protocol" }
futures-util = "0.3"
http = "1"
httpdate = "1"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rsa = "0.9"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = { version = "0.10", features = ["oid"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
libp2p = { version = "0.53", features = ["macros", "tokio", "tcp", "dns", "noise", "yamux", "mdns", "identify", "ping", "request-response", "quic", "kad", "relay", "dcutr", "gossipsub", "autonat", "websocket"] }
async-trait = "0.1"
time = { version = "0.3", features = ["formatting"] }
blurhash = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
aes-gcm = "0.10"
webrtc = "0.12.0"
hkdf = "0.12"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"
