[package]
name = "fedi3_p2p_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
fedi3_protocol = { path = "../fedi3_protocol" }
futures-util = "0.3"
libp2p = { version = "0.53", features = ["macros", "tokio", "tcp", "dns", "noise", "yamux", "identify", "ping", "quic", "kad", "relay", "request-response", "websocket"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
