[package]
name = "fedi3_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
http = "1"
fedi3_protocol = { path = "../fedi3_protocol" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["oid"] }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
httpdate = "1"
rsa = "0.9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
async-trait = "0.1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
chrono = { version = "0.4", default-features = false, features = ["std", "alloc", "clock"] }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
deadpool = "0.10"
libp2p = { version = "0.53", features = ["macros", "tokio", "tcp", "dns", "noise", "yamux", "identify", "ping", "request-response", "quic", "kad", "relay", "websocket"] }
